[gd_scene load_steps=4 format=3 uid="uid://di0nq402o15r5"]

[ext_resource type="Script" path="res://Scenes/Weapons/ShotGunBulletDark.gd" id="1_rlr5g"]
[ext_resource type="Texture2D" uid="uid://dvwasit21c07r" path="res://Assets/ShotGunBulletDark.png" id="2_86nw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxlw4"]
size = Vector2(9, 9)

[node name="ShotGunBulletDark" type="Area2D"]
script = ExtResource("1_rlr5g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.029026, 0.0768795)
texture = ExtResource("2_86nw5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="sndPlay" type="AudioStreamPlayer2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["attack", "projectile"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_rxlw4")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
